Correct title line height on mobile

--- a/src/components/organism/Introduction/_Introduction.scss
+++ b/src/components/organism/Introduction/_Introduction.scss
@@ -10,10 +10,6 @@
   padding: 0 var(--space-4x);
   @include animations.opacityAnimation(var(--longAnimation));
 
-  h1 {
-    line-height: .2;
-  }
-
   @include mq.mq($until: tablet) {
     grid-template-columns: 1fr;
     padding: var(--space-8x) var(--space-4x);
